language/move-lang/tests/move_check/naming/generics_shadowing_invalid.exp
error: 

   ┌── tests/move_check/naming/generics_shadowing_invalid.move:8:16 ───
   │
 9 │         (s1: Self.S);
   │         ^^^^^^^^^^^^ Invalid type annotation
   ·
 8 │     foo<S>(s1: S, s2: S): S {
   │                - The type: 'S'
   ·
 9 │         (s1: Self.S);
   │              ------ Is is not compatible with: '0000000000000000000000000000000000000000000000000000000000000001.M.S'
   │

error: 

    ┌── tests/move_check/naming/generics_shadowing_invalid.move:10:16 ───
    │
 10 │         let s: S = S {};
    │                    ^^^^ Invalid type annotation
    ·
 10 │         let s: S = S {};
    │                    ---- The type: '0000000000000000000000000000000000000000000000000000000000000001.M.S'
    ·
 10 │         let s: S = S {};
    │                - Is is not compatible with: 'S'
    │

error: 

    ┌── tests/move_check/naming/generics_shadowing_invalid.move:8:16 ───
    │
 11 │         bar(s1);
    │         ^^^^^^^ Invalid call of '0000000000000000000000000000000000000000000000000000000000000001.M.bar'. Invalid argument for parameter 's'
    ·
 8 │     foo<S>(s1: S, s2: S): S {
    │                - The type: 'S'
    ·
 15 │     bar(s: S) {}
    │            - Is is not compatible with: '0000000000000000000000000000000000000000000000000000000000000001.M.S'
    │

error: 

    ┌── tests/move_check/naming/generics_shadowing_invalid.move:8:27 ───
    │
 12 │         S {}
    │         ^^^^ Invalid return expression
    ·
 12 │         S {}
    │         ---- The type: '0000000000000000000000000000000000000000000000000000000000000001.M.S'
    ·
 8 │     foo<S>(s1: S, s2: S): S {
    │                           - Is is not compatible with: 'S'
    │

